--- a/index.html
+++ b/index.html
@@ -6,8 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission 2022</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="first-part">
+        <div id="first-para">
+            <h1 id="border">Stay Focused on <br>
+                <span>Mission 2022</span>
+            </h1>
+            <p>
+                Lorem ipsum dolor sit amet, usu cu esse possit 
+                referrentur, at eam falli deterruisset. No duo populo 
+                animal noluisse, enim
+            </p>
+            <a class="link-button" href="">Explore Now</a>
+            <p>
+                Scroll down to explore more about us
+            </p>
+        </div>
+        <div>
+            <img src="images/person/person-2.png" alt="">
+        </div>
+    </section>
+    <section id="second">
+        <div>
+            <h2>
+                My Mission in <span>2022</span>
+            </h2>
+        </div>
+        <div class="first-part">
+            <div class="second-paragraph">
+                <img id="img-second" src="images/illustrators/illustrator-1.png" alt="">
+                <h2>Mission</h2>
+                <p>
+                    The first and foremost duty of a student is to acquire knowledge.I am a student of Applied Mathematics.I also want to learn about web developing.In 2022 I will become a wed developer and this is my mission. 
+                </p>
+            </div>
+            <div class="second-paragraph">
+                <img id="img-second" src="images/illustrators/illustrator-2.png" alt="">
+                <h2>vision</h2>
+                <p>
+                    “To inspire the worlds youth to think big, have serious impact on society and overcome obstacles using my experience having to do it all on my own.”
+                </p>
+            </div>
+            <div class="second-paragraph">
+                <img id="img-second" src="images/illustrators/illustrator-3.png" alt="">
+                <h2>Goals</h2>
+                <p>
+                    In 2022 I have a lots of goals to achieve such as being a web developer or Mathematician.
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
