--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="images/person/person-2.png" alt="">
         </div>
     </section>
-    <section id="second">
+    <section class="second">
         <div>
             <h2>
                 My Mission in <span>2022</span>
@@ -38,21 +38,21 @@
         </div>
         <div class="first-part">
             <div class="second-paragraph">
-                <img id="img-second" src="images/illustrators/illustrator-1.png" alt="">
+                <img src="images/illustrators/illustrator-1.png" alt="">
                 <h2>Mission</h2>
                 <p>
                     The first and foremost duty of a student is to acquire knowledge.I am a student of Applied Mathematics.I also want to learn about web developing.In 2022 I will become a wed developer and this is my mission. 
                 </p>
             </div>
             <div class="second-paragraph">
-                <img id="img-second" src="images/illustrators/illustrator-2.png" alt="">
+                <img src="images/illustrators/illustrator-2.png" alt="">
                 <h2>vision</h2>
                 <p>
                     “To inspire the worlds youth to think big, have serious impact on society and overcome obstacles using my experience having to do it all on my own.”
                 </p>
             </div>
             <div class="second-paragraph">
-                <img id="img-second" src="images/illustrators/illustrator-3.png" alt="">
+                <img src="images/illustrators/illustrator-3.png" alt="">
                 <h2>Goals</h2>
                 <p>
                     In 2022 I have a lots of goals to achieve such as being a web developer or Mathematician.
@@ -60,5 +60,71 @@
             </div>
         </div>
     </section>
+    <section class="third-part">
+        <div>
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="third-para">
+            <div>
+                <h2>Develop Without your Limits</h2>
+            <p>
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
+                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
+                dissentias et cum.
+            </p>
+            <a class="link-button" href="">Read the Documentation</a>
+            </div>
+        </div>
+    </section>
+    <section class="first-part">
+        <div>
+            <h2>
+                Know our Global Community
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam 
+                falli deterruisset. No duo populo animal noluisse, enim deterruisset 
+                eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert 
+                gubergren dissentias et cum.
+            </p>
+            <a class="link-button" href="">Read the Documentation</a>
+        </div>
+        <div id="fourth">
+            <img src="images/pictures/project.png" alt="">
+        </div>
+    </section>
+    <section>
+        <div class="second">
+            <h2>
+                Build Corona Application
+            </h2>
+        </div>
+        <div class="first-part">
+            <div>
+                <img src="images/pictures/app.png" alt="">
+            </div>
+            <div>
+                <h2>
+                    Stay safe with <br> Go <span>Corona</span>
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet, usu cu esse possit referrentur, 
+                    at eam falli deterruisset. No duo populo animal noluisse, 
+                    enim deterruisset eos et. An mundi noster pri, ea eos quas 
+                    expetendis scripserit, affert gubergren dissentias et cum
+                </p>
+                <a  class="link-button" href="">Add Features</a>
+            </div>
+        </div>
+    </section>
+    <footer id="footer">
+        <h2>
+            Mission <span class="footer-yr">2022</span>
+        </h2>
+        <small>
+            Hard work, Perseverance, and Determination for 2022
+        </small>
+    </footer>
 </body>
 </html>
