--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
                 <span>Mission 2022</span>
             </h1>
             <p>
-                Lorem ipsum dolor sit amet, usu cu esse possit 
-                referrentur, at eam falli deterruisset. No duo populo 
-                animal noluisse, enim
+                Mission statements are a great way to answer the questions who, what, when, where, why, and how. Companies, organizations, schools, and individuals all use mission statements to convey what they hope to achieve as well as their values and vision.
             </p>
             <a class="link-button" href="">Explore Now</a>
             <p>
@@ -36,26 +34,29 @@
                 My Mission in <span>2022</span>
             </h2>
         </div>
-        <div class="first-part">
-            <div class="second-paragraph">
+        <div class="second-part">
+            <div class="second-paragraph" id="background-color">
                 <img src="images/illustrators/illustrator-1.png" alt="">
                 <h2>Mission</h2>
                 <p>
-                    The first and foremost duty of a student is to acquire knowledge.I am a student of Applied Mathematics.I also want to learn about web developing.In 2022 I will become a wed developer and this is my mission. 
+                    The first and foremost duty of a student is to acquire knowledge.I am a student of Applied Mathematics.I also want to learn about web developing.In 2022 I will become a wed developer and this is my mission.I constantly strive to be the best version of myself.
+                    My mission is to live honestly and to stay true to myself.
+                    I aspire to learn at least one new thing each day. 
                 </p>
             </div>
-            <div class="second-paragraph">
+            <div class="second-paragraph" id="background-color-two">
                 <img src="images/illustrators/illustrator-2.png" alt="">
                 <h2>vision</h2>
                 <p>
                     “To inspire the worlds youth to think big, have serious impact on society and overcome obstacles using my experience having to do it all on my own.”
                 </p>
             </div>
-            <div class="second-paragraph">
+            <div class="second-paragraph" id="background-color-three">
                 <img src="images/illustrators/illustrator-3.png" alt="">
                 <h2>Goals</h2>
                 <p>
-                    In 2022 I have a lots of goals to achieve such as being a web developer or Mathematician.
+                    In 2022 I have a lots of goals to achieve such as being a web developer or Mathematician.Build a strong network.
+                    Build good study habits. Read a Book Every Month
                 </p>
             </div>
         </div>
@@ -64,8 +65,8 @@
         <div>
             <img src="images/pictures/coding.png" alt="">
         </div>
-        <div class="third-para">
-            <div>
+        <div>
+            <div class="third-para">
                 <h2>Develop Without your Limits</h2>
             <p>
                 Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
@@ -75,7 +76,7 @@
             </p>
             <a class="link-button" href="">Read the Documentation</a>
             </div>
-        </div>
+        </div>   
     </section>
     <section class="first-part">
         <div>
@@ -90,15 +91,15 @@
             </p>
             <a class="link-button" href="">Read the Documentation</a>
         </div>
-        <div id="fourth">
+        <div>
             <img src="images/pictures/project.png" alt="">
         </div>
     </section>
     <section>
         <div class="second">
-            <h2>
-                Build Corona Application
-            </h2>
+            <h1>
+                Build <span>Corona Application</span>
+            </h1>
         </div>
         <div class="first-part">
             <div>
