--- a/index.html
+++ b/index.html
@@ -69,10 +69,7 @@
             <div class="third-para">
                 <h2>Develop Without your Limits</h2>
             <p>
-                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
-                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
-                dissentias et cum.
+                The starting point of great success and achievement has always been the same. It is for you to dream big dreams. There is nothing more important, and nothing that works faster than for you to cast off your own limitations than for you to begin dreaming and fantasizing about the wonderful things that you can become, have, and do
             </p>
             <a class="link-button" href="">Read the Documentation</a>
             </div>
