--- a/index.html
+++ b/index.html
@@ -81,10 +81,8 @@
                 Know our Global Community
             </h2>
             <p>
-                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam 
-                falli deterruisset. No duo populo animal noluisse, enim deterruisset 
-                eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert 
-                gubergren dissentias et cum.
+                Global community means the people or nations of the world, considered as being closely connected by modern telecommunications and as being economically, socially, and politically interdependent
+                
             </p>
             <a class="link-button" href="">Read the Documentation</a>
         </div>
@@ -100,17 +98,16 @@
         </div>
         <div class="first-part">
             <div>
-                <img src="images/pictures/app.png" alt="">
+                <div class="four-image">
+                    <img src="images/pictures/app.png" alt="">
+                </div>
             </div>
             <div>
                 <h2>
                     Stay safe with <br> Go <span>Corona</span>
                 </h2>
                 <p>
-                    Lorem ipsum dolor sit amet, usu cu esse possit referrentur, 
-                    at eam falli deterruisset. No duo populo animal noluisse, 
-                    enim deterruisset eos et. An mundi noster pri, ea eos quas 
-                    expetendis scripserit, affert gubergren dissentias et cum
+                    Avoid crowds and close contact. Wear a properly fitted mask when physical distancing is not possible and in poorly ventilated settings. Clean your hands frequently with alcohol-based hand rub or soap and water. Cover your mouth and nose with a bent elbow or tissue when you cough or sneeze.
                 </p>
                 <a  class="link-button" href="">Add Features</a>
             </div>
